# victoria-terminal

./: .containerignore  .crushignore  .flake8  .gitignore  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRUSH.md  Containerfile  GAMMA_INTEGRATION.md  GAMMA_MCP_FIXES.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_TEST_PROPOSAL.md  LICENSE  PUT_INSTALLER_HERE.txt  README-Windows.md  README.md  SECURITY.md  SIGNING.md  SNOWFLAKE.md  SNOWFLAKE_SETUP.md  TESTING.md  VICTORIA.md  Vagrantfile  VictoriaBrowser.py  VictoriaConfigurator.py  VictoriaTerminal.py  chart_brief_generator.py  common.py  container_entrypoint.sh  crush.json  crush.template.json  entrypoint.sh  example.env  gamma-mcp.py  gamma_api_research.md  gamma_cli.py  gamma_client.py  gamma_integration_plan.md  (+43 more)
.github/: SECURITY.md  pull_request_template.md
.openhands/: TASKS.md
assets/: VictoriaBrowser.icns  VictoriaConfigurator.icns  VictoriaInstaller.icns  VictoriaTerminal.icns  icon.icns
configurator/: __main__.py  cli.py  config.py  constants.py  ui.py
dependencies/: README.md  common.sh  install_prerequisites_linux.sh  install_prerequisites_macos.sh  install_prerequisites_windows.bat  install_prerequisites_windows.ps1  set_env_linux.sh  set_env_macos_linux.sh  set_env_windows.bat  set_env_windows.ps1
docs/: DEVELOPMENT_WORKFLOW.md  MCP_DEVELOPMENT.md  MCP_EMAIL.md  MCP_GAMMA.md  MCP_SENDGRID.md  ORCHESTRATION.md  README.md  ROADMAP.md  RUNNING_LOCALLY.md  SES_EMAIL_SETUP.md  SNOWFLAKE_SETUP.md  orchestration.md  user_workflow.mmd  victoria_layers.mmd
installers/: README.md  Vagrantfile  run_utm_test.sh
mcp/: README.md  gamma_server.py  sendgrid_server.py  ses_s3_email.py  status_reporter.py
mcp_servers/: mcp_server.py
protocols/: ab-test-evaluation.md  audience-insight-analysis.md  budget-pacing-forecast.md  campaign-wrap-up.md  creative-performance-deep-dive.md  daily-health-check.md  executive-report.md  frequency-analysis.md  inventory-quality-audit.md  optimization.md  pmp-deal-troubleshooting.md  qbr-prep.md  supply-path-optimization.md
remote-runner/: CLEANUP.md  README.md  __init__.py  __main__.py  cleanup-all.sh  cleanup-podman.sh  cleanup-victoria.sh  orchestrator-openapi.yaml  runner.py
scripts/: install_victoria.ps1  installer_win.iss  package_linux.sh  package_mac.sh  package_win.bat  restart_browseros.sh
tests/: README.md  (+23 more)
(+32 files in other folders)
