[project]
name = "victoria-terminal"
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
]

[tool.black]
line-length = 120
target-version = ["py38"]


[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["victoria_terminal"]


[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
