[project]
name = "victoria-terminal"
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
]

[tool.black]
line-length = 120
target-version = ["py38"]


[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["configurator"]


[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]


[tool.pytest.ini_options]
addopts = "--timeout=60 --timeout-method=thread --strict-config --strict-markers -v --tb=short --cov=configurator --cov-report=term-missing"
timeout = 60
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
